# daha

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  bot.db  create_mock_data.py  create_test_data.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_postgres.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report-template.md  tech-task-template.md  user-story-template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: backend.yml  bot.yml  ci.yml
app/: api.py  models.py  router.py  test_api.py
app/core/: models.py  router.py  test_router.py
backend/: .gitlab-ci.yml  AUTHENTICATION.md  README.md  create_test_data.py  env.example  main.py  pyproject.toml  requirements.txt
backend/app/: api.py  dependencies.py  models.py  router.py
backend/app/auth/: linking.py  models.py  router.py  services.py
backend/app/bot/: router.py
backend/app/core/: cache.py  config.py  conftest.py  exceptions.py  health.py  improved_router.py  metrics.py  middleware.py  migrations.py  models.py  pagination.py  protected_router.py  rate_limiter.py  router.py  services.py  test_improvements.py  test_router.py  test_unit.py  user_preferences.py
backend/tests/: test_auth.py
bot/: .env  README.md  bot.db  daha-bot.service  deploy.sh  main.py  nginx-bot.conf  requirements.txt  test_bot.py
bot/app/: api.py  bot.py  config.py  daha_api.py  handlers.py  main.py  models.py  polling.py  webhook.py
frontend/: README.md  index.html  package.json  tsconfig.app.json
src/: App.tsx
(+108 files in other folders)
