[project]
name = "daha-backend"
version = "0.1.0"
description = "Study project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]


[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
